examples/kju/positive/comments/comment_inside_line.kju
fun kju():Unit
{
    var nickelback /* well known band */ : Int /* band type */ = 0 /* band value */;
}
