examples/kju/negative/comments/comment_inside_type.kju
fun kju() : Unit
{
    var name : In/* Hello, World! */t = 0;
};